--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "dependencies": {
     "react": "^16.8.3",
     "react-bootstrap": "^1.0.0-beta.5",
-    "react-dom": "^16.8.3",
-    "react-router-dom": "^5.0.0"
+    "react-dom": "^16.8.3"
   },
   "devDependencies": {
     "react-scripts": "^2.1.8"
